# EDHD-Primeo-Energie

./: .gitignore  environment.yml  first_steps.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: first_steps-checkpoint.ipynb  pyproject-checkpoint.toml
notebooks/: first_steps.ipynb
src/: test.ipynb
src/secondeo/: utils.py
src/secondeo/data_modules/: PVF_fe.py  PVF_feature_importance.py
src/secondeo/model_modules/: PVF_lgbm.py  PVF_lstm.py  basic_time_series_models.py  factor_analysis.py  lstm_exp.py
src/secondeo/params_modules/: data_param.yaml  model_param.yaml
