[tool.poetry]
name = "python-poetry-1"
version = "0.1.0"
description = ""
authors = ["Timo Kropp <t.kropp@primeo-energie.ch"]
readme = "readme.md"
# Important: use `package-mode = false` if the repository
# is not an installable package.
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.2"
pandas = "^2.2.3"
jupyterlab = "^4.3.5"
scipy = "^1.15.1"
torch = "^2.6.0"
pytorch-lightning = "^2.5.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"